# Empire

./: .gitignore  CHANGELOG.md  alembic.ini  conftest.py  empire.py  ps-empire  pyproject.toml
.github/workflows/: lint-and-test.yml
docs/: SUMMARY.md
docs/agents/: README.md
docs/agents/c/: README.md
docs/database/: README.md
docs/modules/: module-configuration.md
docs/modules/module-development/: README.md
docs/quickstart/: README.md  server.md
empire/server/: config.yaml
empire/server/api/: jwt_auth.py
empire/server/api/v2/agent/: agent_api.py  agent_file_api.py  agent_task_api.py  agent_task_dto.py
empire/server/api/v2/bypass/: bypass_api.py
empire/server/api/v2/credential/: credential_api.py
empire/server/api/v2/download/: download_api.py
empire/server/api/v2/host/: host_api.py  process_api.py
empire/server/api/v2/ip/: ip_api.py
empire/server/api/v2/listener/: listener_api.py  listener_dto.py  listener_template_api.py
empire/server/api/v2/meta/: meta_api.py
empire/server/api/v2/module/: module_api.py
empire/server/api/v2/obfuscation/: obfuscation_api.py
empire/server/api/v2/plugin/: plugin_api.py  plugin_dto.py  plugin_registry_api.py  plugin_task_api.py
empire/server/api/v2/profile/: profile_api.py
empire/server/api/v2/stager/: stager_api.py  stager_dto.py  stager_template_api.py
empire/server/api/v2/tag/: tag_api.py
empire/server/api/v2/user/: user_api.py
empire/server/api/v2/websocket/: socketio.py
empire/server/common/: empire.py  packets.py
empire/server/core/: agent_communication_service.py  agent_service.py  agent_socks_service.py  agent_task_service.py  hooks.py  listener_service.py  listener_template_service.py  module_service.py  obfuscation_service.py  plugin_registry_service.py  plugin_service.py  plugins.py  stager_generation_service.py  stager_service.py  stager_template_service.py
empire/server/core/config/: config_manager.py  data_manager.py
empire/server/core/db/: base.py
empire/server/core/db/alembic/: env.py  script.py.mako
empire/server/data/agent/: agent.py  ironpython_agent.py
empire/server/data/module_source/collection/: Get-ClipboardHistory.ps1  Get-FoxDump.ps1
empire/server/data/module_source/persistence/: Set-WindowsTerminalProfile.ps1
empire/server/data/module_source/privesc/: Invoke-BypassUAC.ps1  Invoke-BypassUACTokenManipulation.ps1  Invoke-EnvBypass.ps1  Invoke-EventVwrBypass.ps1  Invoke-FodHelperBypass.ps1  Invoke-SDCLTBypass.ps1  Invoke-WScriptBypassUAC.ps1
empire/server/modules/bof/credentials/: bofroast.py  bofroast.yaml  credman.py  credman.yaml  handlekatz.py  handlekatz.yaml  nanodump.py  nanodump.yaml
empire/server/modules/bof/management/: inject_amsi_bypass.yaml  inject_etw_bypass.py  inject_etw_bypass.yaml  patchit.py  patchit.yaml  unhook.py  unhook.yaml
empire/server/modules/csharp/code_execution/: Assembly.yaml  AssemblyReflect.yaml  RunCoff.yaml  Shellcode.yaml
empire/server/modules/csharp/credentials/: Certify.yaml  Rubeus.yaml  SharpDPAPI.yaml  Sharpdump.yaml
empire/server/modules/csharp/management/: PatchETW.yaml  PatchlessAMSI.yaml  ProcessInjection.py  ProcessInjection.yaml  Spawn.yaml  StratumMiner.yaml  ThreadlessInject.py  ThreadlessInject.yaml  VNC.yaml
empire/server/modules/csharp/situational_awareness/: Moriarty.yaml  Seatbelt.yaml  SharpSC.yaml  SharpUp.yaml  SharpWMI.yaml
empire/server/modules/powershell/code_execution/: compile_after_delivery.py  compile_after_delivery.yaml  invoke_bits_transfer.yaml  invoke_chm.yaml  invoke_cmstp.yaml  invoke_indirect_execution.yaml  invoke_installutil.yaml  invoke_jsc.yaml  invoke_mshta.yaml  invoke_msiexec.yaml  invoke_ntsd.py  invoke_ntsd.yaml  invoke_regasm.yaml  invoke_regsvr32.yaml  invoke_rundll32.yaml  invoke_shellcodemsil.py  invoke_signed_script.yaml  thread_execution_hijack.yaml
empire/server/modules/powershell/collection/: stage_local_data.yaml
empire/server/modules/powershell/credentials/: cached_domain_creds.yaml  credential_injection.py
empire/server/modules/powershell/exfiltration/: invoke_exfil_protocol.yaml
empire/server/modules/powershell/lateral_movement/: inveigh_relay.yaml  invoke_dcom.yaml  invoke_executemsbuild.yaml  invoke_psexec.yaml  invoke_psremoting.yaml  invoke_smbexec.yaml  invoke_wmi.yaml  invoke_wmi_debugger.yaml  jenkins_script_console.yaml  new_gpo_immediate_task.yaml
empire/server/modules/powershell/management/: base64_encode_file.yaml  clear_command_history.yaml  disable_firewall.yaml  fsutil_indicator_removal.yaml  hide_artifacts.yaml  impair_history_logging.yaml  install_root_certificate.yaml  invoke_bypass.py  invoke_bypass.yaml  masquerade_file.yaml  masquerade_location.yaml  psinject.py  reflective_inject.py  reflective_inject.yaml  spawn.yaml  spawnas.yaml  (+4 more)
empire/server/stagers/: CSharpPS.yaml  CSharpPy.yaml  Sharpire.yaml
empire/server/stagers/multi/: generate_agent.py  launcher.py  macro.py
empire/server/stagers/windows/: bunny.py  cmd_exec.py  csharp_exe.py  dll.py  ducky.py  hta.py  launcher_bat.py  launcher_vbs.py  launcher_xml.py  macro.py  shellcode.py  teensy.py  war.py  wmic.py
empire/server/utils/: donut_util.py  option_util.py
empire/test/: test_agent_checkins_api.py  test_agent_communication_service.py  test_alembic.py  test_compiler_sync.py  test_config.py  test_hook_connection_amplification.py  test_listener_api.py  test_module_service.py  test_obfuscation_api.py  test_option_util.py  test_plugin_registry_api.py  test_server_config.yaml  test_user_api.py
empire/test/test_performance/: README.md  conftest.py  helpers.py  test_blocking.py  test_event_loop_blocking.py  test_hook_amplification_integration.py  test_infra_smoke.py  test_module_obfuscation.py  test_pool_exhaustion.py
setup/: install.sh
(+115 files in other folders)
