[tool.poetry]
name = "empire-bc-security-fork"
version = "6.6.0"
description = ""
authors = ["BC Security <info@bc-security.org>"]
readme = "README.md"
homepage = "https://github.com/BC-SECURITY/Empire"
repository = "https://github.com/BC-SECURITY/Empire.git"
packages = [
    { include = "empire.py" },
    { include = "empire/server/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
urllib3 = "^2.6.3"
requests = "^2.32.5"
macholib = "^1.16.4"
pyOpenSSL = "^25.3.0"
zlib_wrapper = "^0.1.3"
jinja2 = "^3.1.6"
pyparsing = "^3.3.2"
PyMySQL = "^1.1.2"
SQLAlchemy = "^2.0.46"
alembic = "^1.15.0"
PyYAML = "^6.0.3"
SQLAlchemy-Utc = "^0.14.0"
pycryptodome = "^3.23.0"
cryptography = "^46.0.5"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
jq = "^1.11.0"
aiofiles = "^25.1.0"
python-multipart = "^0.0.22"
python-jose = {version = "^3.5.0", extras = ["cryptography"]}
python-socketio = "^5.16.1"
Flask = "^3.1.3"
pysecretsocks = {git = "https://github.com/BC-SECURITY/PySecretSOCKS.git", rev = "da5be0e"}
# The official donut-shellcode release doesn't support arm64
# and on newer linux kernels, it's starting to fail due to
# security restrictions with execstack.
# https://github.com/TheWover/donut/issues/139
donut-shellcode = { git = "https://github.com/BC-SECURITY/donut.git", rev = "b361c0d3" }
python-obfuscator = "^0.0.2"
pyinstaller = "^6.19.0"
packaging = "^26.0"
netaddr = "^1.3.0"
bcrypt = "^5.0.0"
requests-file = "^3.0.1"
pydantic-settings = "^2.13.1"
prettytable = "^3.17.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1" # For starlette TestClient
pytest = "^9.0.2"
pytest-timeout = "^2.4.0"
ruff = "^0.15.2"
pytest-cov = "^7.0.0"
coverage = {version = "^7.13.4", extras = ["toml"]}
pytest-env = "^1.5.0"
pytest-rerunfailures = "^16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = [
    'empire/server/data',
    'empire/server/downloads',
    # This file is a pain to untangle for some of the linting rules
    # it is from a 3rd party library, and its mostly untested.
    'empire/server/common/malleable',
    "empire/server/Empire-Compiler",
    ".claude/worktrees",
]
target-version = "py313"

[tool.ruff.lint]
# Will revisit line lengths later. Black won't format the strings and comments
# by default. And the experimental flag still has some issues.
# fixes right now: https://github.com/psf/black/issues/2188
extend-ignore = ["E501"]

select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
#    "C90", # mccabe
    "I",   # isort
    "UP",  # pyupgrade
#    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
#    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
#    "ERA", # eradicate
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLW", # pylint-warning
    "PLR", # pylint-refactor
#    "TRY", # tryceratops
    "FAST", # fastapi
#    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query", "fastapi.File"]

[tool.ruff.lint.per-file-ignores]
# PLR, PLW: Each individual stager, listener, and module lacks tests, so it is not worth the
# risk to manually refactor them until there are tests in place for them.
"empire/server/listeners/*" = ["PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901"]
"empire/server/stagers/*" = ["PLR0911", "PLR0912", "PLR0915"]
"empire/server/modules/*" = ["PLR0911", "PLR0912", "PLR0913", "PLR0915"]

# It's hard to limit arguments on the endpoint functions.
"empire/server/api/*" = ["PLR0913"]

"empire/server/listeners/http_malleable.py" = ["SLF"]

# Can't control how many fixtures are needed for the tests.
"empire/test/*" = ["PLR0913", "S", "SLF"]
"empire/server/modules/powershell/persistence/elevated/schtasks.py" = ["PLR2004"]
"empire/server/modules/powershell/persistence/elevated/wmi.py" = ["PLR2004"]
"empire/server/modules/powershell/persistence/elevated/wmi_updater.py" = ["PLR2004"]

# A bunch of imports of the app and MainMenu object would break the behavior
# if moved to the top of the file. This could be addressed by restructuring
# the code base.
"empire/server/api/app.py" = ["PLC0415"]
"empire/server/api/v2/shared_dependencies.py" = ["PLC0415"]
"empire/server/server.py" = ["PLC0415"]
# Alembic imports are deferred to avoid circular deps with env.py;
# startup_db and backup_db have many branches/statements due to
# schema setup, Alembic init, and multi-backend backup logic.
"empire/server/core/db/base.py" = ["PLC0415", "PLR0911", "PLR0912", "PLR0915"]

# A few imports should be local because they need to be reset between tests.
"empire/test/conftest.py" = ["PLC0415"]
"empire/test/test_logs.py" = ["PLC0415"]
"empire/test/test_listener_generate_launcher.py" = ["PLC0415"]
"empire/test/test_alembic.py" = ["PLC0415"]

[tool.coverage.run]
omit = [
    "empire/server/data/**",
    "empire/test/**",
    ]

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/config.html
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]
omit = [
    "empire/server/data/**",
    "empire/test/**",
    ]

ignore_errors = true
